package it.unicam.cs.ids.hackhub.repository;

import it.unicam.cs.ids.hackhub.entity.Hackathon;

public interface RepoHackathon {

    void salva(Hackathon h);
}
