package it.unicam.cs.ids.hackhub.repository;

import it.unicam.cs.ids.hackhub.entity.Valutazione;

public interface RepoValutazione {

    void salva(Valutazione v);
}
