@startuml CLASSI_PROGETTO_CHANGE
' === TRASCRIZIONE FEDELE (gemello esatto) di CLASSI_PROGETTO_REALIZZATI.jpg (Visual Paradigm) ===
' Questo .puml e' allineato 1:1 al JPG del deliverable, INCLUSE le caratteristiche del JPG che
' divergono dal codice Java e dal modello "migliorato": naming GestoreTeam/GestoreHackathon (gli
' altri control restano Service*), nuovoHackathon()/nuovoTeam() senza parametri, creaHackathon
' SENZA organizzatore e con ritorno void, Hackathon CON attributo "stato: Stato" e SENZA
' creaIscrizione, RepoHackathon senza metodi, RepoTeam.salva(parameter), nessuna legenda.
' Anche le incoerenze di casing del JPG sono replicate (luogo: String nei parametri ma "string"
' nell'attributo; mentori: List<Utente> in creaHackathon/inserisceDati ma "list<Utente>" in assegnaStaff).
' Diagramma delle classi di PROGETTAZIONE - HackHub, 1a iterazione.
!pragma layout elk
hide empty members
hide circle

' =========================================================
' LAYER 1 - Boundary («Handler»)
' =========================================================
class HandlerCreaHackathon <<Handler>> {
  + nuovoHackathon(): void
  + inserisceDati(nome: string, dataInizio: Date, dataFine: Date, luogo: String, regolamento: string, scadenzaIscrizioni: Date, dimensioneMaxTeam: int, montepremi: long, giudice: Utente, mentori: List<Utente>): void
}

class HandlerCreaTeam <<Handler>> {
  + nuovoTeam(): void
  + inserisceNome(nome: string): void
}

class HandlerIscrizione <<Handler>> {
  + richiediIscrizione(team: Team, hackathon: Hackathon): void
}

class HandlerSottomissione <<Handler>> {
  + apriModulo(iscrizione: Iscrizione): void
  + caricaInvia(titolo: string, contenuto: string): void
  + conferma(): void
  + annulla(): void
}

class HandlerValutazione <<Handler>> {
  + apriElenco(hackathon: Hackathon): void
  + selezionaSottomissione(sub: Sottomissione): void
  + valuta(giudizio: string, punteggio: int): void
}

' =========================================================
' LAYER 2 - Control («service»)
' =========================================================
class GestoreHackathon <<service>> {
  + creaHackathon(nome: string, dataInizio: Date, dataFine: Date, luogo: String, regolamento: string, scadenzaIscrizioni: Date, dimensioneMaxTeam: int, montepremi: long, giudice: Utente, mentori: List<Utente>): void
}

class GestoreTeam <<service>> {
  + iniziaCreazioneTeam(utente: Utente): boolean
  + creaTeam(nome: string): boolean
}

class ServiceIscrizione <<service>> {
  + iscriviTeam(team: Team, hackathon: Hackathon): boolean
}

class ServiceSottomissione <<service>> {
  + sottomissioneConsentita(iscrizione: Iscrizione): boolean
  + inviaSottomissione(iscrizione: Iscrizione, titolo: string, contenuto: string): boolean
}

class ServiceValutazione <<service>> {
  + elencoSottomissioni(hackathon: Hackathon): List<Sottomissione>
  + dettagli(sub: Sottomissione): Sottomissione
  + valuta(sub: Sottomissione, giudizio: string, punteggio: int): boolean
}

' =========================================================
' LAYER 3 - Domain Entities («Entity»)
' =========================================================
class Utente <<Entity>> {
  - nome: string
  - email: string
}

class Hackathon <<Entity>> {
  - nome: string
  - regolamento: string
  - scadenzaIscrizioni: date
  - dataInizio: date
  - dataFine: date
  - luogo: string
  - montepremi: long
  - dimensioneMaxTeam: int
  - stato: Stato
  + assegnaStaff(organizzatore: Utente, giudice: Utente, mentori: list<Utente>): void
  + iscrivibile(team: Team): boolean
  - verificaDimensione(team: Team): boolean
  + iscrizioneConsentita(): boolean
  + sottomissioneConsentita(): boolean
  + valutazioneConsentita(): boolean
}

class Team <<Entity>> {
  - nome: string
  + numeroMembri(): int
}

class Incarico <<Entity>> {
  - ruolo: RuoloStaff
}

class Appartenenza <<Entity>> {
  - amministratore: boolean
}

class Iscrizione <<Entity>> {
  - dataIscrizione: date
  + creaSottomissione(titolo: string, contenuto: string): Sottomissione
}

class Sottomissione <<Entity>> {
  - titolo: string
  - contenuto: string
  - dataOra: dateTime
  + registraValutazione(giudizio: string, punteggio: int, giudice: Utente): Valutazione
}

class Valutazione <<Entity>> {
  - giudizio: string
  - punteggio: int
}

' =========================================================
' Pattern State (GoF) - Stato astratto + 4 concreti
' =========================================================
abstract class Stato {
  + iscrizioneConsentita(): boolean
  + sottomissioneConsentita(): boolean
  + valutazioneConsentita(): boolean
}

class InIscrizione {
}

class InCorso {
}

class InValutazione {
}

class Concluso {
}

' =========================================================
' Enum
' =========================================================
enum RuoloStaff {
  Organizzatore
  Giudice
  Mentore
}

' =========================================================
' LAYER 4 - Repository («Repository»)
' (RepoHackathon e' senza metodi nel JPG)
' =========================================================
interface RepoUtente <<Repository>> {
  + appartieneAdUnTeam(u: Utente): boolean
}

interface RepoHackathon <<Repository>> {
}

interface RepoTeam <<Repository>> {
  + esisteNome(nome: string): boolean
  + salva(parameter): void
}

interface RepoIscrizione <<Repository>> {
  + esisteIscrizione(team: Team, hackathon: Hackathon): boolean
  + salva(i: Iscrizione): void
}

interface RepoSottomissione <<Repository>> {
  + salva(sub: Sottomissione): void
  + sottomissioniDi(h: Hackathon): List<Sottomissione>
}

interface RepoValutazione <<Repository>> {
  + salva(v: Valutazione): void
}

' =========================================================
' RELAZIONI
' =========================================================

' --- Pattern State: generalizzazione ---
Stato <|-- InIscrizione
Stato <|-- InCorso
Stato <|-- InValutazione
Stato <|-- Concluso

' --- Context <-> State (associazione navigabile unidirezionale) ---
Hackathon "0..*" --> "1" Stato : stato corrente

' --- Triangolo del dominio (con classi-associazione) ---
Utente "1..*" -- "0..*" Hackathon
(Utente, Hackathon) .. Incarico

Utente "1..*" -- "0..1" Team
(Utente, Team) .. Appartenenza

Team "0..*" -- "0..*" Hackathon
(Team, Hackathon) .. Iscrizione

' --- Catena del valore (composizioni) ---
Iscrizione "1" *-- "0..1" Sottomissione : contiene
Sottomissione "1" *-- "0..1" Valutazione : riceve
Utente "1" -- "0..*" Valutazione : redige

' --- Dipendenza enum ---
Incarico ..> RuoloStaff

' --- EBC: Boundary -> Control ---
HandlerCreaHackathon ..> GestoreHackathon
HandlerCreaTeam      ..> GestoreTeam
HandlerIscrizione    ..> ServiceIscrizione
HandlerSottomissione ..> ServiceSottomissione
HandlerValutazione   ..> ServiceValutazione

' --- Control -> Repository (Pure Fabrication) ---
GestoreHackathon     ..> RepoHackathon
GestoreTeam          ..> RepoUtente
GestoreTeam          ..> RepoTeam
ServiceIscrizione    ..> RepoIscrizione
ServiceSottomissione ..> RepoSottomissione
ServiceValutazione   ..> RepoSottomissione
ServiceValutazione   ..> RepoValutazione

' --- Control -> Entity (uso/orchestrazione) ---
GestoreHackathon     ..> Hackathon
GestoreTeam          ..> Team
ServiceIscrizione    ..> Hackathon
ServiceSottomissione ..> Iscrizione
ServiceSottomissione ..> Hackathon
ServiceValutazione   ..> Sottomissione
ServiceValutazione   ..> Hackathon

@enduml
